fix pr :  Autocomplete   - blur on select(chrome fix)   - keep search input dom handle (more flexible future dev)   - fix padding on mobile  General   - segregate code between app_panel and application(main)   - fix z-index for fav panel   - fix share panel top border url

--- a/src/scss/includes/autocomplete.scss
+++ b/src/scss/includes/autocomplete.scss
@@ -133,6 +133,7 @@ input[type="search"]::-webkit-search-cancel-button {
   .search_form__clear {
     font-size: 24px;
     color: $secondary_text;
+    width: 40px;
   }
 
   .search_form {
@@ -149,7 +150,7 @@ input[type="search"]::-webkit-search-cancel-button {
     left: 8px;
     top:10px;
     position: absolute;
-    padding: 0 50px 0 50px;
+    padding: 0 80px 0 50px;
     border-radius: 24px;
   }
 
