--- a/src/scss/includes/panels/poi_panel.scss
+++ b/src/scss/includes/panels/poi_panel.scss
@@ -209,7 +209,7 @@ $BLOCK_INDENT: 60px;
   margin-top: 20px;
   line-height: 22px;
   font-size: 15px;
-  width: 300px;
+  padding-right: 60px;
 }
 
 .poi_panel__info__item {
