--- a/src/scss/includes/panels/share.scss
+++ b/src/scss/includes/panels/share.scss
@@ -16,7 +16,7 @@
   left: calc(50vw - 160px);
   top: calc(50vh - 200px);
   padding: 30px 24px;
-  background: url('/images/popup_top.svg') white no-repeat;
+  background: url('../images/popup_top.svg') white no-repeat;
   box-shadow: 0 0 4px 0 rgba(0,0,0,.15);
   border-radius: 3px;
 }
